--- a/tt_css/index.html
+++ b/tt_css/index.html
@@ -10,37 +10,64 @@
 
 <body>
 <style>
-    h2 {
-        padding: -1px;
-        border-style: solid;
-        border-width: 5px;
-        margin: -1px;
+    :root {
+        --backColor: grey;
     }
-    ul{
-        padding: -1px;
+    .custom {
+        padding-top: 0px;
+        padding-bottom: 0px;
         border-style: solid;
-        border-width: 5px;
         margin: -1px;
-    }
-    li {
-        margin-bottom: 3px;
     }
 
+    .d1 {
+        padding-bottom: 0px;
+        padding-top: 0px;
+        border-style: solid;
+        margin: -1px;
+        background: var(--backColor, grey);
+    }
+
+    .d2 {
+        padding-bottom: 10px;
+        padding-top: 100px;
+        border-style: solid;
+        margin: -1px;
+        background: var(--backColor, grey);
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 50px 50px;
+    }
 </style>
 
 <header>
-<h2>TO DO</h2>
+    <div class="d1">
+        <h2 class="custom">TO DO</h2>
+    </div>
 </header>
 
 <main>
-<ul>
-    <li>Attend mandatory classes</li>
-    <li>Read and get info about <i>trading</i></li>
-</ul>
+    <div class="d1">
+        <ul class="custom">
+            <li class="custom">Attend mandatory classes</li>
+            <li class="custom">Read and get info about <i>trading</i></li>
+        </ul>
+    </div>
+    <div class="d1">
+        <p class="custom">IMPORTANTE: encontrar arte que represente el conocimiento</p>
+    </div>
+
 </main>
 
 <footer>
-
+    <div class="d2">
+        <div class="d1">
+            SETTINGS
+        </div>
+        <div class="d1">
+            PROFILE
+        </div>
+    </div>
 </footer>
 </body>
 </html>
