Phase 2 Desarrollo cáscara html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name=”keywords” content=”IOTA, DB>
 <link rel="stylesheet" href="stylesheet.css">
+<script src="myscript.js"></script>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
                     <label for="option4">Hash</label></div>
                 </div>
                 <div class=item6>
-                    <input type=”text” value="Introduza su Address">
+                    <input type=”text”>
                 </div>
                 <div class=item7>
                     Aquí los outputs</div>
@@ -39,6 +40,7 @@
         <div class="item3">El encabezado estético</div>
         <div class="item4">La barra de contacto</div>
     </div>
+<!-- 29/09/2020. Duración: 4 horas dedicadas-->
 
 </body>
 </html>
