--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name=”keywords” content=”IOTA, DB>
 <link rel="stylesheet" href="stylesheet.css">
-<script src="myscript.js"></script>
 </head>
 
 <body>
@@ -16,7 +15,7 @@
         <div class="item1">
             El contenido principal de la página
             <div class="item1GridContainer">
-                <div class=item5>
+                <div class="item5">
                     <div><input type="checkbox" id="option1">
                     <label for="option1">Seed</label>
                     
@@ -29,11 +28,11 @@
                     <input type="checkbox" id="option4">
                     <label for="option4">Hash</label></div>
                 </div>
-                <div class=item6>
+                <div class="item6">
                     <input type=”text”>
                 </div>
-                <div class=item7>
-                    Aquí los outputs</div>
+                <div class="item7">Mi proposito es ser sustituido
+                    </div>
                 </div>
         </div>
         <div class="item2">La barra de herramientas</div>
@@ -42,5 +41,6 @@
     </div>
 <!-- 29/09/2020. Duración: 4 horas dedicadas-->
 
+<script src="myscript.js"></script>
 </body>
 </html>
