--- a/index.html
+++ b/index.html
@@ -12,33 +12,38 @@
 <body>
 
     <div class="gridContainer">
+
         <div class="item1">
-            El contenido principal de la página
+            
             <div class="item1GridContainer">
+
                 <div class="item5">
-                    <div><input type="checkbox" id="option1">
-                    <label for="option1">Seed</label>
+                    <div><input type="checkbox" class="boxOption" id="boxOption1" value="false" onclick="singleBox('boxOption1')">
+                    <label for="boxOption1">Addresses</label></div>
+
+                    <div><input type="checkbox" class="boxOption" id="boxOption2" value="false" onclick="singleBox('boxOption2')">
+                    <label for="boxOption2">Tag</label></div>
+
+                    <div><input type="checkbox" class="boxOption" id="boxOption3" value="false" onclick="singleBox('boxOption3')"> 
+                    <label for="boxOption3">Hash</label></div>                
+                </div>
+
+                <div class="item6" id="item6">
+                </div>
+
+                <div class="item7">
+                    <div><button type="submit" onclick="submit()">Submit Output</button></div>
+                    <div><textarea id="outputArea"></textarea></div>
+                </div>
                     
-                    <input type="checkbox" id="option2">
-                    <label for="option2">Addresses</label></div>
-
-                    <div><input type="checkbox" id="option3">
-                    <label for="option3">Tag</label>
-
-                    <input type="checkbox" id="option4">
-                    <label for="option4">Hash</label></div>
-                </div>
-                <div class="item6">
-                    <input type=”text”>
-                </div>
-                <div class="item7">Mi proposito es ser sustituido
-                    </div>
-                </div>
+            </div>
         </div>
+
         <div class="item2">La barra de herramientas</div>
         <div class="item3">El encabezado estético</div>
         <div class="item4">La barra de contacto</div>
     </div>
+
 <!-- 29/09/2020. Duración: 4 horas dedicadas-->
 
 <script src="myscript.js"></script>
