Phase 1 - Learning reactive programming

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     </div>
 
 <!-- 29/09/2020. Duración: 4 horas dedicadas-->
+<!-- 30/10/2020. Duración: 3 horas-->
 
 <script src="myscript.js"></script>
 </body>
