Phase 3 - learning reactive programmin

--- a/tt_reactive/index.html
+++ b/tt_reactive/index.html
@@ -2,3 +2,6 @@
 <html>
     <script src="myscript.js"></script>
 </html>
+
+<!-- 01/10/2020. Duración: 2,5 horas-->
+<!-- 02/10/2020. Duración: 0,75 horas-->
