--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 
 <body>
-    <input type='text' id='address'></input></br>
-    <input type='text' id='hash'></input></br>
-    <input type='text' id='tag'></input></br>
+    <input type='checkbox' id='addressbox' onclick="addkey('addresses')">
+    <input type='text' id='addresses'></input></br>
+    <input type='checkbox' id='bundlebox' onclick="addkey('bundles')">
+    <input type='text' id='bundles'></input></br>
+    <input type='checkbox' id='tagbox' onclick="addkey('tags')">
+    <input type='text' id='tags'></input></br>
    
     <button type='submit'>Search</button></br>
     <textarea id='ouput'></textarea></br>
