--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <input type='checkbox' id='addressbox' onclick="addkey('addresses')">
+    <input type='checkbox' id='addressesbox' value='true' onclick="addkey('addresses')">
     <input type='text' id='addresses'></input></br>
-    <input type='checkbox' id='bundlebox' onclick="addkey('bundles')">
+    <input type='checkbox' id='bundlesbox' value='true' onclick="addkey('bundles')">
     <input type='text' id='bundles'></input></br>
-    <input type='checkbox' id='tagbox' onclick="addkey('tags')">
+    <input type='checkbox' id='tagsbox' value='true' onclick="addkey('tags')">
     <input type='text' id='tags'></input></br>
    
     <button type='submit'>Search</button></br>
