--- a/frontend/websockets/frontend/index.html
+++ b/frontend/websockets/frontend/index.html
@@ -5,19 +5,23 @@
 <meta name="description" content="This a University project for UPM">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name=”keywords” content="IOTADB">
+<link rel="stylesheet" href='main.css'>
 </head>
 
 <body>
+    <div id='addresses_container'>
     <input type='checkbox' id='addressesbox' value='true' onclick="addkey('addresses')">
-    <input type='text' id='addresses'></input></br>
-    <input type='checkbox' id='bundlesbox' value='true' onclick="addkey('bundles')">
-    <input type='text' id='bundles'></input></br>
+    <input type='text' id='addresses'></input></br></div>
+    
+    <div id='tags_container'>
     <input type='checkbox' id='tagsbox' value='true' onclick="addkey('tags')">
-    <input type='text' id='tags'></input></br>
+    <input type='text' id='tags'></input></br></div>
    
-    <button type='submit'>Search</button></br>
-    <textarea id='ouput'></textarea></br>
+    <div><button id='submit' type='submit'>Search</button></div>
+    <div id='output_container'></div>
 
+    <script src='/socket.io/socket.io.js'></script>
     <script src='index.js'></script>
 </body>
+
 </html>
