MySql POOL added -> Parallel queries

--- a/frontend/websockets/frontend/index.html
+++ b/frontend/websockets/frontend/index.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+    <div>
+        <input type='text' id='regName'>Name</input>
+        <input type='text' id='regPassword'>Password</input>
+        <input type='text' id='regEmail'>Email</input>
+        <button id='register' type='submit'>Register</button>
+    </div>
+
+    <div>
+        <input type='text' id='logName'>Name</input>
+        <input type='text' id='logPassword'>Password</input>
+        <button id='login' type='submit'>Login</button>
+    </div>
+
     <div id='addresses_container'>
     <input type='checkbox' id='addressesbox' value='true' onclick="addkey('addresses')">
     <input type='text' id='addresses'></input></br></div>
