Users table updates & registration 19/12 dur: 1,5h

--- a/frontend/websockets/frontend/index.html
+++ b/frontend/websockets/frontend/index.html
@@ -15,7 +15,7 @@
         <input type='text' id='regEmail'>Email</input>
         <button id='register' type='submit'>Register</button>
     </div>
-
+    <div id='forReg'></div>
     <div>
         <input type='text' id='logName'>Name</input>
         <input type='text' id='logPassword'>Password</input>
