Login Success added and shakehand comm

--- a/frontend/websockets/frontend/index.html
+++ b/frontend/websockets/frontend/index.html
@@ -21,6 +21,7 @@
         <input type='text' id='logPassword'>Password</input>
         <button id='login' type='submit'>Login</button>
     </div>
+    <div id='forLog'></div>
 
     <div id='addresses_container'>
     <input type='checkbox' id='addressesbox' value='true' onclick="addkey('addresses')">
