BackPage achieved; falta corregir formato. 26/12/2020 Dur: 3h

--- a/frontend/websockets/frontend/index.html
+++ b/frontend/websockets/frontend/index.html
@@ -9,15 +9,11 @@
 </head>
 
 <body>
-    <div id='options'>
-        <button id='register' type='submit'>Register</button>
-        <button id='login' type='submit'>Login</button>
-    </div>
-
-    <div id='optionsContainer'></div>
-
+    <div id='pageContainer'></div>
+    
     <script src='/socket.io/socket.io.js'></script>
     <script src='index.js'></script>
+    <script src='index2.js'></script>
 </body>
 
 </html>
