React Js tutorial complete. 02/02/2021 Dur: 7h

--- a/frontend/rest/index.html
+++ b/frontend/rest/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta name="description" content="This a University project for UPM">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name=”keywords” content="IOTADB">
+<meta name="keywords" content="IOTADB">
 <link rel="stylesheet" href='main.css'>
 </head>
 
 <body>
-    <div id='pageContainer'>HOLA HOLA</div>
+    <div id='newHtml'></div>
     
     <script src='index.js'></script>
 </body>
